test/typeCheckTest/fail/test12.ic
class FirstMain {
	void main (string [] args) {
		Library.println("first main");
	}
}

class SecondMain {
	void main (string [] args) {
		Library.println("second main");
	}
}